<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textColor="#212121"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/doris_day_before"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/doris_day_before" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#673AB7"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="cursive"
                android:text="@string/question_1"
                android:textColor="#212121"
                android:textSize="24sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/acting_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/acting"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/singing_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/singing"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="20sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:text="@string/dancing"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="cursive"
                android:text="@string/question_2"
                android:textColor="#212121"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/film_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/film_1"
                    android:textColor="#212121"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/film_2"
                    android:textColor="#212121"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/film_3"
                    android:fontFamily="cursive"
                    android:textColor="#212121"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="3. What is Doris Day's real name?"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Doris Day"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="#212121"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ellen Wagstaff Arden"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="#212121"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/name_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="Doris Mary Ann Kappelhoff"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="#212121"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="4. What song did she make famous?"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="White Christmas"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="#212121"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Steppin' Out with My Baby"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="#212121"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/song_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="Que Sera, Sera"
                    android:fontFamily="cursive"
                    android:textStyle="bold"
                    android:textColor="#212121"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="5. Doris Day was born on April 3rd, 1922. How old did she turn in 2018?"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textColor="#212121"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/age_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:ems="3"
                android:hint="Age"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:textSize="20sp"
                android:inputType="textCapWords"
                android:textColor="#212121" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:onClick="submitAnswers"
                android:fontFamily="cursive"
                android:textStyle="bold"
                android:text="Submit" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>

